--- a/css stuff/bikeshop.css
+++ b/css stuff/bikeshop.css
@@ -1,5 +1,7 @@
+/* Matthy ITEC236, last developed 2 Feb 2025 */
+
 body {
-	font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     margin: 0px auto 0px;
     padding: 20px;
