--- a/css stuff/bikeshop.css
+++ b/css stuff/bikeshop.css
@@ -3,7 +3,7 @@ body {
     font-size: 100%;
     margin: 10px auto 10px;
     padding: 20px;
-    background-color: rgb(191, 221, 255);
+    background-color: lavendar;
     width: 725px;
 }
 
