--- a/css stuff/bikeshop.css
+++ b/css stuff/bikeshop.css
@@ -1,3 +1,5 @@
+<!--Matty, Southern Illinois University, Last Developed & Tested 2 Feb 2025-->
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
