--- a/css stuff/bikeshop.css
+++ b/css stuff/bikeshop.css
@@ -1,4 +1,4 @@
-<!--Matty, Southern Illinois University, Last Developed & Tested 2 Feb 2025-->
+/* Matty, Southern Illinois University, Last Developed & Tested 2 Feb 2025 */
 
 body {
     font-family: Arial, Helvetica, sans-serif;
