--- a/css stuff/bikeshop.css
+++ b/css stuff/bikeshop.css
@@ -3,19 +3,13 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    margin: 10px auto 10px;
-    padding: 20px;
+    margin: 10px;
     background-color: lavender;
     width: 725px;
 }
 
 footer {
-
-    margin: 0.05em;
-    border-top: 0.035em blue solid;
-    text-align: center;
-    font-size: 90%;
-    font-style: bold;
+    clear: both;
 }
 
 h1 {
@@ -26,9 +20,7 @@ h1 {
 
 h2 {
     padding: 10px;
-    font-size:  125%;
-    
-
+    font-size:  125%;    
 }
 
 h3 {
@@ -59,11 +51,25 @@ img {
     object-position: center top;  
 }
 
-.list {
+ul { 
     padding-left: 10px;
+}
+
+li {
+    padding-left: 10px; /* space between bullet and text */ 
 
 }
 main {
-    padding: 0.05em;
+    width: 50%; 
+    height: 500px;
+    background-color: #ffffff; /* this color is white for column panel */
+    float: left;
+}
+
+aside {
+    width: 50%;
+    height: 500px;
+    background-color: #ffffff; /* this color is white for column panel */
+    float: right; 
 }
  
