--- a/css stuff/main.css
+++ b/css stuff/main.css
@@ -2,8 +2,8 @@
 
 /* the styles for the elements */ 
 body {
-    
-    
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
     width: 725px;
     background-color: gray; /* this color is gray */
     margin: 10px auto;
