--- a/css stuff/main.css
+++ b/css stuff/main.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     width: 725px;
-    background-color: gray; /* this color is gray */
+    background-color: lavender; /* color is as it says */
     margin: 10px auto;
     } 
 
