--- a/css stuff/main.css
+++ b/css stuff/main.css
@@ -1,4 +1,4 @@
-/* @author jeff miller, Millers Bicycles CSS Style Page, Southern Illinois University  Developed: 9-14-2019  Tested: 9-15-2019 */ 
+/* Matty SIU ITEC236, edited 3 Feb 2025 */ 
 
 /* the styles for the elements */ 
 body {
