--- a/css_stuff/main.css
+++ b/css_stuff/main.css
@@ -4,7 +4,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 725px;
+    width: 50%;
     background-color: lavender; /* color is as it says */
     margin: 10px auto;
     } 
@@ -22,7 +22,7 @@ aside {
     float: right; }
 h1, h2 {
    
-    padding: 10px;
+    padding: 0.625em;
   
 } 
 p { 
