--- a/css_stuff/main.css
+++ b/css_stuff/main.css
@@ -5,6 +5,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     width: 50%;
+    max-width: 725px;
     background-color: lavender; /* color is as it says */
     margin: 10px auto;
     } 
