--- a/css_stuff/main.css
+++ b/css_stuff/main.css
@@ -57,10 +57,43 @@ li {
     top: 10px; 
 }
 
+#nav_list ul { 
+	list-style: none;
+	margin-left: 0;
+	margin-bottom: 1.5em; }
+#nav_list ul li { 
+	width: 93.02325%;
+	margin-bottom: .5em;
+	border: 2px double black;
+	border-radius: 10px;
+	box-shadow: 3px 3px 0 0 #800000;
+	background-image: url("images/right.jpg");
+	background-repeat: no-repeat;
+	background-position: 95% center;
+}
+#nav_list ul li a {
+	display: block;
+	padding: .5em 0 .5em 3.72093%;
+	text-decoration: none;
+	font-weight: bold;
+	color: black;
+}
+#nav_list ul li a.current {
+	color: #800000;
+}
+
+
 @media only screen and (max-width: 720px) {
 	body {
 		font-size: 90%;
 	}
+	#nav_list ul li {
+		border: none;
+		box-shadow: none;
+		background-image: none;
+	}
+	#nav-list ul li a {
+		padding-left: 0;
 
 /* basic images where blue borders are not required */ 
 img {
