--- a/css_stuff/main.css
+++ b/css_stuff/main.css
@@ -56,7 +56,20 @@ li {
     right: 10px; 
     top: 10px; 
 }
+aside {
+	width: 25.29411%;
+	float: right;
+	padding: 0 0 20px 2.35294%;
+}
+aside h2 {
+	color: #800000;
+	font-size: 130%;
+	padding: .6em 0 .25em 0;
+}
 
+aside h3 {
+	font-size: 100%;
+	padding-bottom: .25em;
 #nav_list ul { 
 	list-style: none;
 	margin-left: 0;
