--- a/css_stuff/main.css
+++ b/css_stuff/main.css
@@ -19,7 +19,7 @@ main {
 aside {
     width: 50%;
     height: 300px;
-    background-color: #ffffff; /* this color is white for column panel */
+    background-color: #lavender; /* this color is white for column panel */
     float: right; }
 
 aside h2 {
@@ -41,7 +41,7 @@ aside h3 {
 	margin-bottom: .5em;
 	border: 2px double black;
 	border-radius: 10px;
-	box-shadow: 3px 3px 0 0 #800000;
+	box-shadow: 3px 3px 0 0 black;
 	background-image: url("images/right.jpg");
 	background-repeat: no-repeat;
 	background-position: 95% center;
