--- a/css_stuff/main.css
+++ b/css_stuff/main.css
@@ -104,6 +104,10 @@ li {
 	}
 	#nav-list ul li a {
 		padding-left: 0; }
+figure {
+    float: left;
+    margin-right: 1.5em; 
+}
 
 .mono {
     width: 100%;
