--- a/css_stuff/main.css
+++ b/css_stuff/main.css
@@ -103,7 +103,7 @@ li {
 		background-image: none;
 	}
 	#nav-list ul li a {
-		padding-left: 0; }
+		padding-left: 0; } }
 figure {
     float: left;
     margin-right: 1.5em; 
