--- a/css_stuff/main.css
+++ b/css_stuff/main.css
@@ -15,6 +15,28 @@ main {
     height: 500px;
     background-color: #ffffff; /* this color is white for column panel */
     float: left; }
+section {
+    width: 67.64705%;
+    float: right;
+    padding: 25px 30px;
+}
+section p {
+    font-size: 90%;
+    margin-bottom: .7em;
+}
+table {
+    border: 1px solid black;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+caption {
+    text-align: center;
+    font-size: 160%;
+    font-weight: bold;
+    margin: 0 0 .5em 0;
+}
+figure, figcaption {
+    margin: 0;
 
 aside {
     width: 50%;
