--- a/css_stuff/main.css
+++ b/css_stuff/main.css
@@ -14,15 +14,7 @@ main {
     width: 50%; 
     height: 500px;
     background-color: #ffffff; /* this color is white for column panel */
-    float: left; }
-section {
-    width: 67.64705%;
-    float: right;
-    padding: 25px 30px;
-}
-section p {
-    font-size: 90%;
-    margin-bottom: .7em;
+    float: left;
 }
 table {
     border: 1px solid black;
@@ -36,8 +28,8 @@ caption {
     margin: 0 0 .5em 0;
 }
 figure, figcaption {
-    margin: 0; }
-
+    margin: 0;
+}
 aside {
     width: 50%;
     height: 300px;
